--- a/flex/06-flex-layout/solution/solution.css
+++ b/flex/06-flex-layout/solution/solution.css
@@ -31,11 +31,12 @@ input {
 body {
   display: flex;
   flex-direction: column;
+  
 }
 
-button {
+/*button {
   padding: 8px 16px;
-}
+}*/
 
 .content {
   flex: 1;
