--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,15 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+.header ul{
+  display: flex;
+  gap: 8px;
+}
+
 
 .logo {
   font-size: 48px;
