--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px; ;
 }
 
 .icon {
@@ -53,6 +54,7 @@ button {
   border-radius: 8px;
 }
 
+
 button.continue {
   background: royalblue;
   border: 1px solid royalblue;
@@ -64,3 +66,17 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.header{
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+.toppart{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+}
+.text{margin-bottom: 20px;}
