--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -24,4 +24,41 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+  
 }
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+.content{
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.footer,
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+.footer ul,
+.header ul{
+  display: flex;
+  gap: 8px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.footer a,
+.header a{
+  text-decoration: none;
+  color:black
+}
+
+.footer{
+  background-color:rgb(194, 194, 194)
+}
+
